--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@ body{
     width: 100%;
 }
 #ball1{
+    text-align: center;
+    color: white;
     height: 200px;
     width: 200px;
     position: absolute;
@@ -16,7 +18,7 @@ body{
     top:0;
     background-color: red;
     border-radius: 50%;
-    transition: left 3s ease-in;
+    transition: left 3s ease;
 }
 
 #ball2{
@@ -26,7 +28,7 @@ body{
     position: absolute;
     left: 400px;
     top: 100px;
-    transition: left 1s ease;
+    transition: left 2s ease;
     
 }
 
